# software-metrics-assignment5

./: README.md  pyproject.toml
dashboard/: app.py
measurement_programme/config/: projects.yaml
measurement_programme/scripts/: screenshot_dashboard.py
measurement_programme/src/measure/: config.py  db.py
measurement_programme/src/measure.egg-info/: PKG-INFO  entry_points.txt
measurement_programme/src/measure/collectors/: git_collector.py  static_python_collector.py
measurement_programme/src/measure/metrics/: process_metrics.py
measurement_programme/src/measure/quality/: aimq_checks.py
measurement_programme/tests/: test_aimq_checks.py  test_metrics_smoke.py
scripts/: run_daily.sh
src/measure/: cli.py  runner.py
src/measure.egg-info/: SOURCES.txt  requires.txt
src/measure/collectors/: defect_dataset_collector.py  github_collector.py
src/measure/metrics/: defect_prediction_metrics.py  exceptions_metrics.py  green_proxy_metrics.py  oo_metrics.py  smells_metrics.py  static_metrics.py
